@@ -13,3 +13,4 @@
 #undef PACKAGE_SOURCE_DIR
 #undef PACKAGE_BIN_DIR
 #undef PACKAGE_LIB_DIR
+#undef USE_FERITE
